--- a/style/style.css
+++ b/style/style.css
@@ -302,9 +302,6 @@ section#nevada__satin {
 }
 
 /*Seccion Donde Comprar*/
-main {
-    padding-top: 95px;
-}
 
 .mapa__botones {
 
@@ -371,9 +368,21 @@ main {
 
     }
 
+    .oi-menu {
+        font-size: 20px;
+    }
+
     .menu__mobile {
         display: block;
+        z-index: 4;
+        position: fixed;
+        right: 10px;
+        margin-top: 30px;
 
+    }
+
+    .dropdown-menu {
+        width: 100%;
     }
 
     .carousel-item img {
