--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,5 +1,6 @@
-$colorTextoprincipal: whitesmoke;
-$sombraBotones: 0px 15px 20px rgba(0, 0, 0, 0.4);
+@import "base/variables";
+@import "base/extends";
+@import "base/mixins";
 
 * {
     margin: 0;
@@ -315,6 +316,7 @@ footer {
     margin-top: 300px;
     display: flex;
     justify-content: center;
+    color: black;
 
     p {
         color: black;
@@ -352,7 +354,7 @@ footer {
     }
 
     div {
-        background-color: rgb(222, 211, 182);
+        background-color: black;
         border-radius: 16px;
         color: $colorTextoprincipal;
         padding: 15px 32px;
@@ -428,6 +430,12 @@ footer {
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    max-width: 260px;
+    padding-right: 60px;
+
+    @media only screen and (max-width:768px) {
+        padding-right: 0px;
+    }
 
     p,
     .contacto {
