--- a/scss/base/_extends.scss
+++ b/scss/base/_extends.scss
@@ -1,10 +1,4 @@
-%display-flex-column {
-    display: flex;
-    flex-direction: column;
-}
+%accion__botones-hover {
+    box-shadow: $sombraBotones;
 
-
-%display-flex-row {
-    display: flex;
-    flex-direction: row;
 }
