--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,3 +1,4 @@
 $colorTextoprincipal: whitesmoke;
+$colorTextosecundario: black;
 $sombraBotones: 0px 15px 20px rgba(0, 0, 0, 0.4);
 $texto-default: 12px
